# ScreenLock

./: .gitlab-ci.yml  .recent_files  CMakeLists.txt  README  README.md  main.c  slock.c
config/: config.h
helpers/: CMakeLists.txt  helpers.c  helpers.h
input_handling/: CMakeLists.txt  password_input_handler.c  password_input_handler.h
locker/: CMakeLists.txt  screen_locker.c  screen_locker.h
user/: CMakeLists.txt  user_data.c  user_data.h
utils/: util.h
window/: CMakeLists.txt  locking_window.c  locking_window.h
